--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,13 @@
     "description": "ApplicationCatalogGui module",
     "license": "proprietary",
     "require": {
-        "php": ">=7.3",
+        "php": ">=7.4",
         "spryker/application-catalog": "^0.1.0",
         "spryker/gui": "^3.33.0",
         "spryker/kernel": "^3.30.0",
         "spryker/locale": "^1.0.0 || ^2.0.0 || ^3.0.0",
         "spryker/symfony": "^3.0.0",
+        "spryker/transfer": "^3.27.0",
         "spryker/util-text": "^1.1.0"
     },
     "require-dev": {
