--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,15 @@
     "license": "proprietary",
     "require": {
         "php": ">=7.4",
+        "psr/http-message": "^1.0.0",
+        "spryker/glossary": "^3.8.0",
         "spryker/gui": "^3.33.0",
         "spryker/kernel": "^3.30.0",
         "spryker/locale": "^1.0.0 || ^2.0.0 || ^3.0.0",
         "spryker/symfony": "^3.0.0",
         "spryker/transfer": "^3.27.0",
+        "spryker/guzzle": "^2.2.0",
+        "spryker/util-encoding": "^2.1.0",
         "spryker/util-text": "^1.1.0"
     },
     "require-dev": {
