--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": ">=7.4",
         "psr/http-message": "^1.0.0",
+        "spryker/error-handler": "^2.1.0",
         "spryker/glossary": "^3.8.0",
         "spryker/gui": "^3.33.0",
         "spryker/kernel": "^3.30.0",
@@ -17,7 +18,9 @@
         "spryker/util-text": "^1.1.0"
     },
     "require-dev": {
-        "spryker/code-sniffer": "*"
+        "spryker/code-sniffer": "*",
+        "spryker/propel": "*",
+        "spryker/testify": "*"
     },
     "autoload": {
         "psr-4": {
