--- a/tests/SprykerTest/Client/ApplicationCatalogGui/codeception.yml
+++ b/tests/SprykerTest/Client/ApplicationCatalogGui/codeception.yml
@@ -1,4 +1,4 @@
-namespace: SprykerTest\Zed\ApplicationCatalogGui
+namespace: SprykerTest\Client\ApplicationCatalogGui
 
 paths:
     tests: .
@@ -12,13 +12,15 @@ coverage:
     whitelist: { include: ['../../../../src/*'] }
 
 suites:
-    Business:
-        path: Business
-        class_name: ApplicationCatalogGuiBusinessTester
+    Client:
+        path: ./
+        class_name: ApplicationCatalogGuiClientTester
         modules:
             enabled:
                 - Asserts
                 - \SprykerTest\Shared\Testify\Helper\Environment
-                - \SprykerTest\Shared\Testify\Helper\BusinessHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
+                - \SprykerTest\Client\Testify\Helper\ConfigHelper
+                - \SprykerTest\Client\Testify\Helper\ClientHelper
+
