APPS-2766: Fixed comments

--- a/tests/SprykerTest/Zed/ApplicationCatalogGui/codeception.yml
+++ b/tests/SprykerTest/Zed/ApplicationCatalogGui/codeception.yml
@@ -20,5 +20,5 @@ suites:
                 - Asserts
                 - \SprykerTest\Shared\Testify\Helper\Environment
                 - \SprykerTest\Shared\Testify\Helper\BusinessHelper
-                - \SprykerTest\Shared\Propel\Helper\TransactionHelper
+                - \SprykerTest\Shared\Propel\Helper\ConnectionHelper
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
