--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
         "spryker/kernel": "^3.30.0",
         "spryker/locale": "^1.0.0 || ^2.0.0 || ^3.0.0",
         "spryker/log": "^2.0.0 || ^3.0.0",
+        "spryker/store": "^1.15.0",
+        "spryker/store-reference": "*",
         "spryker/symfony": "^3.0.0",
         "spryker/transfer": "^3.27.0",
+        "spryker/translator": "^1.9.0",
         "spryker/util-encoding": "^1.0.0 || ^2.0.0",
         "spryker/util-text": "^1.1.0"
     },
@@ -28,11 +31,16 @@
             "Spryker\\": "src/Spryker/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "SprykerTest\\": "tests/SprykerTest/"
+        }
+    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/",
-        "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/"
+        "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/",
+        "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/"
     },
     "extra": {
         "branch-alias": {
