--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "spryker/symfony": "^3.0.0",
         "spryker/transfer": "^3.27.0",
         "spryker/translator": "^1.5.1",
-        "spryker/util-encoding": "^1.0.0 || ^2.0.0"
+        "spryker/util-encoding": "^1.0.0 || ^2.0.0",
         "spryker/util-text": "^1.1.0"
     },
     "require-dev": {
